# one_billion_lines_python

./: .gitignore  README.md  create_measurements.py  etl_duckdb.py  etl_duckdb_saving_parquet.py  etl_pandas.py  etl_python.py  pyproject.toml
dashboard/: streamlit.py
data/: measurements_summary.parquet
