[tool.poetry]
name = "one-billion-lines-python"
version = "0.1.0"
description = ""
authors = ["emarcari <etore.marcari@terramagna.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
tqdm = "^4.67.1"
black = "^25.9.0"
duckdb = "^1.4.1"
streamlit = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
